fixed items that go out of bounds of container

--- a/web/cobrands/popravito/base.scss
+++ b/web/cobrands/popravito/base.scss
@@ -1824,3 +1824,7 @@ label[for="message"]{
 .filtered-content-map-view #map_box {
     position: relative;
 }
+
+.item-list--reports .item-list__heading {
+    display: flex;
+}
